--- a/argo/workflow/lang/go.yaml
+++ b/argo/workflow/lang/go.yaml
@@ -18,7 +18,7 @@ spec:
           requests:
             storage: 64Mi
   templates:
-    - name: go-ci
+    - name: tmpl-go
       inputs:
         parameters:
           - name: path
